--- a/fluentd.localhost.conf
+++ b/fluentd.localhost.conf
@@ -1,34 +1,3 @@
-####
-## Output descriptions:
-##
-
-# Treasure Data (http://www.treasure-data.com/) provides cloud based data
-# analytics platform, which easily stores and processes data from td-agent.
-# FREE plan is also provided.
-# @see http://docs.fluentd.org/articles/http-to-td
-#
-# This section matches events whose tag is td.DATABASE.TABLE
-#<match td.*.*>
-#  @type tdlog
-#  @id output_td
-#  apikey YOUR_API_KEY
-#
-#  auto_create_table
-#  <buffer>
-#    @type file
-#    path /var/log/td-agent/buffer/td
-#  </buffer>
-#
-#  <secondary>
-#    @type file
-#    path /var/log/td-agent/failed_records
-#  </secondary>
-#</match>
-
-####
-## Source descriptions:
-##
-
 ## built-in TCP input
 ## @see http://docs.fluentd.org/articles/in_forward
 <source>
@@ -36,117 +5,87 @@
   @id input_forward
 </source>
 
-## built-in UNIX socket input
-#<source>
-#  type unix
-#</source>
-
-# HTTP input
-# POST http://localhost:8888/<tag>?json=<json>
-# POST http://localhost:8888/td.myapp.login?json={"user"%3A"me"}
-# @see http://docs.fluentd.org/articles/in_http
-#<source>
-#  @type http
-#  @id input_http
-#  port 8888
-#</source>
-
-## live debugging agent
-#<source>
-#  @type debug_agent
-#  @id input_debug_agent
-#  bind 127.0.0.1
-#  port 24230
-#</source>
-
-####
-## Examples:
-##
-
-## File input
-## read apache logs continuously and tags td.apache.access
-#<source>
-#  @type tail
-#  @id input_tail
-#  <parse>
-#    @type apache2
-#  </parse>
-#  path /var/log/httpd-access.log
-#  tag td.apache.access
-#</source>
-
-## File output
-## match tag=local.** and write to file
-#<match local.**>
-#  @type file
-#  @id output_file
-#  path /var/log/td-agent/access
-#</match>
-
-## Forwarding
-## match tag=system.** and forward to another td-agent server
-#<match system.**>
-#  @type forward
-#  @id output_system_forward
-#
-#  <server>
-#    host 192.168.0.11
-#  </server>
-#  # secondary host is optional
-#  <secondary>
-#    <server>
-#      host 192.168.0.12
-#    </server>
-#  </secondary>
-#</match>
-
-## Multiple output
-## match tag=td.*.* and output to Treasure Data AND file
-#<match td.*.*>
-#  @type copy
-#  @id output_copy
-#  <store>
-#    @type tdlog
-#    apikey API_KEY
-#    auto_create_table
-#    <buffer>
-#      @type file
-#      path /var/log/td-agent/buffer/td
-#    </buffer>
-#  </store>
-#  <store>
-#    @type file
-#    path /var/log/td-agent/td-%Y-%m-%d/%H.log
-#  </store>
-#</match>
-#
+<filter com.pantahub-base.access>
+  @type record_transformer
+  # remove_keys ReqHeaders
+</filter>
 
 <match com.pantahub-base.access>
-   @type elasticsearch
-   log_level info
-   include_tag_key true
-   host localhost
-   port 9200
-   logstash_format true
-   logstash_prefix DEV-ph-access
-   type_name pantahub-base
-   # Set the chunk limits.
-   buffer_chunk_limit 2M
-   buffer_queue_limit 8
-   flush_interval 5s
-   # Never wait longer than 5 minutes between retries.
-   max_retry_wait 30
-   # Disable the limit on the number of retries (retry forever).
-   disable_retry_limit
-   # Use multiple threads for processing.
-   num_threads 2
-</match>
-<match **>
-  @type stdout
-  @id output_stdout
+  @type copy
+
+  <store>
+    @type kafka_buffered
+    @log_level info
+
+    # list of seed brokers
+    brokers kafka:9092
+
+    <buffer>
+      @type memory
+    </buffer>
+
+    # topic settings
+    default_topic fluentd-api
+
+    # data type settings
+    output_data_type json
+    # compression_codec gzip
+
+    # producer settings
+    # max_send_retries 1
+    required_acks 1
+  </store>
+
+  # elasticsearch output for pantahub access logs
+  <store>
+    @type elasticsearch
+    @log_level info
+
+    <buffer>
+      @type memory
+      retry_wait 2m
+      flush_thread_count 8
+      flush_interval 1s
+      chunk_limit_size 32M
+      queue_limit_length 4
+      flush_mode interval
+      retry_max_interval 30
+      retry_forever true
+    </buffer>
+
+    include_tag_key true
+    host elasticsearch
+    port 9200
+    logstash_format true
+    logstash_prefix fluentd-api
+    type_name accesslogs
+    request_timeout 60s
+  </store>
 </match>
 
-<match **>
-   @type null
+<match com.pantahub-base.incidents>
+  @type copy
+
+  <store>
+    @type elasticsearch
+    @log_level info
+
+    <buffer>
+      @type memory
+    </buffer>
+
+    include_tag_key true
+    host elasticsearch
+    port 9200
+    logstash_format true
+    logstash_prefix incidents-api
+    type_name incidents
+    flush_interval 5s
+    # Never wait longer than 5 minutes between retries.
+  </store>
 </match>
 
+# catch all to null
+<match **>
+  @type null
+</match>
