--- a/fluentd.localhost.conf
+++ b/fluentd.localhost.conf
@@ -85,6 +85,28 @@
   </store>
 </match>
 
+<match com.pantahub-base.logs>
+  @type copy
+
+  <store>
+    @type elasticsearch
+    @log_level info
+
+    <buffer>
+      @type memory
+    </buffer>
+
+    include_tag_key true
+    host elasticsearch
+    port 9200
+    logstash_format true
+    logstash_prefix pantahub-com
+    type_name device-logs
+    flush_interval 5s
+    # Never wait longer than 5 minutes between retries.
+  </store>
+</match>
+
 # catch all to null
 <match **>
   @type null
